# yewlife

./: .gitignore  Cargo.toml  README.md  Trunk.toml  base.css  index.html  index.js  index.sass  package.json  wrangler.toml
.github/workflows/: ci.yml
scripts/: ci_app  ci_docker  cloudflare_build
src/: cells.rs  components.rs  main.rs  universe.rs
src/components/: actions.rs  app.rs  bean.rs  button.rs  counter.rs  existence.rs  icons.rs  init_pattern.txt  mod.rs  msg_ctx.rs  score.rs  universe_ctx.rs
