[package]
name = "yewlife"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.20", features=["csr"] }
log = "0.4"
wasm-logger = "0.2"
wasm-bindgen = "0.2.93"
web-sys = {version="0.3.70", features=["Node"]}
gloo-utils = "0.1"
gloo-events = "0.1.2"
gloo-timers = "0.2.6"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
