[package]
name = "yewlife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
log = "0.4"
wasm-logger = "0.2"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Node"] }
gloo-utils = "0.2"
gloo-events = "0.2"
gloo-timers = "0.3"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
